<resources>
    <string name="app_name">CrewManagement</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="Delete_Member">Delete Member</string>
    <string name="Delete_Job">Delete Job</string>
    <string name="New_Member">New Member</string>
    <string name="New_Job">New Job</string>
    <string name="Welcome">Welcome administrator what would you like to use</string>
    <string name="Enter">Enter</string>
    <string name="Password">Password</string>
    <string name="UserName">Username</string>
    <string name="Login">Login</string>
    <string name="Job">Job</string>
    <string name="Name">Name</string>
    <string name="Age">Age</string>
    <string name="Date_of_Hire">Date of Hire</string>
    <string name="lblProgressScreen">Progress Screen</string>
    <string name="lblNumCompleted">Number of Completed Tasks:</string>
    <string name="lblNumIncomplete">Number of Incomplete Tasks:</string>
    <string name="lblSummary">Progress Report</string>
    <string name="postMessage">Send</string>
    <string name="lblPercent">Percent Complete:</string>
    <string name="lblAppIntro">Welcome to the Crew Management Application. </string>
    <string name="admin">Administrator Screen</string>
    <string name="job">Job Screen</string>
    <string name="member">Members Screen</string>
    <string name="progress">Progress Screen</string>
    <string name="news_feed">NewsFeed Screen</string>
    <string name="profile">Profile Screen</string>
	
	 <!-- STRINGS FOR TAB NAMES and JobAssignment Class -->
    <string name="create_Job">Create Job</string>
    <string name="create_Task">Create Task</string>
    <string name="addMemberToJob">Add Member To Job</string>
    <string name="addMemberToTask">Add Member To Task</string>
    <string name="addTaskToJob">Add Task To Job</string>
    <string name="removeJob">Remove Job</string>
    <string name="removeTask">Remove Task</string>
    <string name="jobAssignmentHeader">JOB MANAGEMENT</string>
    <string name="Assign_Job">Assign Job</string>
    <string name="Create_Job">Create Job</string>
    <string name="job_hint">Enter Job to assign</string>
    <string name="employee_hint">Enter Employee for Job</string>
    <string name="Clear_Form">Clear Forms</string>
    <string name="job_hint_creation">Enter Job Name to Create</string>
    <string name="job_duration_hint">Enter Duration of Job</string>
    <string name="task_hint_creation">Enter Task Description. Ex: Mix Bedroom Paint</string>
    <string name="Select_Job">Select Job</string>
    <string name="Select_Task">Select Task</string>
    <string name="Select_Member">Select Member</string>
    <!-- END OF STRINGS FOR TAB NAMES AND JobAssignment CLASS -->

    <string name="defaultJob1">Lumber Yard</string>
    <string name="defaultJob2">Sweeper</string>
    <string name="defaultJob3">Crane Operator</string>
    <string name="defaultJob4">Supervisor</string>
    <string name="defaultJob5">Sign Holder</string>
    <string name="defaultJob6">Human Resources</string>
    <string name="menuOption1">Administration Screen</string>
    <string name="menuOption2">Members Screen</string>
    <string name="menuOption3">View Screen</string>
    <string name="menuOption4">Job Assignment Screen</string>
    <string name="menuOption5">News Feed Screen</string>
    <string name="menuOption6">Log out</string>
    <string name="menuOption7">Call Tech Support</string>

    <string name="ctv">CTV</string>
    <string name="cbc">CBC</string>
    <string name="global">GLOBAL</string>
</resources>
