<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProgressScreen">

    <TextView
        android:id="@+id/lblPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="128dp"
        android:text="@string/lblPercent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/percentComplete"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="196dp"
        android:layout_height="39dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:max="100"
        android:progress="50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPercent" />

    <TextView
        android:id="@+id/lblComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/lblNumCompleted"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblIncomplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/lblNumIncomplete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblComplete" />

    <TextView
        android:id="@+id/completeTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toEndOf="@+id/lblComplete"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/incompleteTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/lblIncomplete"
        app:layout_constraintTop_toBottomOf="@+id/completeTasks" />

</androidx.constraintlayout.widget.ConstraintLayout>