<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/createJobLayout"
    android:tag="createJobPL"
    tools:context=".ui.jobmanagement.fragment_CreateJob">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/txtJobDuration"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
            android:ems="10"
            android:hint="@string/job_duration_hint"
            android:textAlignment="center"
            android:inputType="numberSigned"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtJobName" />

        <Button
            android:id="@+id/btnNewJob"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:text="@string/Create_Job"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/divider3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <Button
            android:id="@+id/btnClearForm"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:text="@string/Clear_Form"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/btnNewJob"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/divider3"
            app:layout_constraintTop_toTopOf="@+id/btnNewJob" />

        <EditText
            android:id="@+id/txtJobName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:hint="@string/job_hint_creation"
            android:importantForAutofill="no"
            android:inputType="text"
            android:lines="1"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider2"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/JobStartDate" />


        <DatePicker
            android:id="@+id/JobStartDate"
            android:layout_width="318dp"
            android:layout_height="107dp"
            android:layout_marginTop="15dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtJobDuration" />

        <View
            android:id="@+id/divider3"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="@+id/btnNewJob"
            app:layout_constraintEnd_toStartOf="@+id/btnClearForm"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnNewJob"
            app:layout_constraintTop_toTopOf="@+id/btnNewJob"
            app:layout_constraintVertical_bias="0.19" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="btnClearForm,btnNewJob,divider3" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>